--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.memoryprofiler": "1.1.6",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.purchasing": "4.9.3",
     "com.unity.render-pipelines.core": "14.0.8",
@@ -24,7 +25,6 @@
     "com.unity.timeline": "1.7.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
-
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
