--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -20,6 +20,7 @@
     "com.unity.scriptablebuildpipeline": "1.21.25",
     "com.unity.searcher": "4.9.2",
     "com.unity.shadergraph": "14.0.8",
+    "com.unity.terrain-tools": "5.0.6",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.5",
