--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ai.navigation": "1.1.6",
     "com.unity.analytics": "3.8.1",
     "com.unity.burst": "1.8.7",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "3.0.24",
